add nature template and improve some scripts

--- a/paper/ApJtemplate/sections/Conclusions.tex
+++ b/paper/ApJtemplate/sections/Conclusions.tex
@@ -1,5 +1,11 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-	
+In this paper, we present our follow-up observations on MAMMOTH-1 in the density peak of large-scale structure BOSS1441 at $\rm z=2.31$ with the newly-onboard KCWI. With the powerful IFU observations, we are allowed to have a deep insight into this enormous Ly$\rm \alpha$ nebula. The main conclusion of this paper are as follows:
+
+(1) With the optimally-extracted images, we find Ly$\rm \alpha$ extends to 175 kpc with the surface brightness of $\rm SB_{Ly\alpha}= 6.4 \times 10^{-18} \ erg \ s^{-1} \ cm^{2} \ arcsec^{-2}$. Besides, we reveal HeII and CIV emission on 80 kpc and 88 kpc with the surface brightness of $\rm SB_{HeII}=9.2 \times 10^{-19} \ erg \ s^{-1} \ cm^{2} \ arcsec^{-2}$ and $\rm SB_{CIV}=3.8 \times 10^{-18} \ erg \ s^{-1} \ cm^{2} \ arcsec^{-2}$ respectively. Furthermore, the NB image obtained with MOIRCS on Subaru Telescope also reveals H$\rm \alpha$ emission on 122 kpc. The ratio map obtained from H$\rm \alpha$ and Ly$\rm \alpha$ emission indicates the "case B" of fluorescence and shock-heating both contribute to the Ly$\rm \alpha$ emission. With the ratio decreasing from edge to center, we note the "case B" of fluorescence should power the emissions in marginal region while shock-heating play an important role in the inner region. The rarely seen very extended H$\rm \alpha$ emission makes this system even more unique.
+
+(2) The velocity gradients revealed from the three-dimensional kinematics of Ly$\rm \alpha$, HeII and CIV emissions have the same direction with velocity offset of $\rm \Delta v=1000 \ km/s$. In addition, the dispersion map of Ly$\alpha$ emission shows an extended region centering on source-B possesses larger velocity dispersion ($\rm \sigma_{v}> 400 \ km/s$) than the expectation in dark matter halo. In some spatial position, the dispersion even reach to 650 km/s which corresponds to 1550 km/s for FWHM. With the presence of extended metal lines and the unique kinematics, outflow from source-B is the most natural explanation.
+
+(3) To find the possible mechanisms powering this outflow, we firstly fit the observed flux of source-B with M82 SED and compare it with the SED or radio fluxes of galaxies with significant radio emission. This comparison confirms that source-B should be a radio-quiet quasar, so radio jet is not the powering mechanism. We further estimate the energy outflow rate $\rm \dot{E}_{out}=3 \times 10^{45} erg/s$ and its coupling efficiency. Comparing these results with simulations, we find quasar-mode feedback is the only mechanism which can power this outflow. The rare seen outflow powered by quasar-mode feedback on CGM scale makes our observations very unique and will further help us to understand its role in the coevolution of galaxies and their gas environments.
 \end{document}
