--- a/paper/ApJtemplate/sections/Discussion.tex
+++ b/paper/ApJtemplate/sections/Discussion.tex
@@ -1,8 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-	\subsection{What drives the outflow?}
+	\subsection{Outflow Driven Mechanism}
 	\subfile{sections/discussion_sections/outflowmechanism.tex}
-	\subsection{Galaxies merger}
+	\subsection{Galaxy Group Systems}
 	\subfile{sections/discussion_sections/galaxymerger.tex}
+	\subsection{Nebula powering mechanism}
+	\subfile{sections/discussion_sections/emission_mechanism}
 \end{document}
