--- a/paper/ApJtemplate/sections/Observations.tex
+++ b/paper/ApJtemplate/sections/Observations.tex
@@ -2,13 +2,13 @@
 
 \begin{document}
 \subsection{KCWI Instrument Configuration}
-In this section, we provide details on the observation and KCWI instrument configurations. We obtained IFU spectroscopy of BOSS1441 on UT-20180518 with KCWI on Keck-II. The large slicer, with Field of View (FoV) of $\rm 20\arcsec \times 33\arcsec$, was employed for this observation which has the spatial resolution of $\rm \approx 1.35\arcsec$. We choose this slicer because it possesses the largest FoV to cover MAMMOTH-1 as widely as possible. We also employed blue BL1 grating centered at $\rm \lambda=4500$ \AA, which gives a usable wavelength coverage of $\rm 3500-5600$ \AA, and is an excellent regime to perform studies of Ly$\rm \alpha$ nebula at $\rm z\approx 2.3$. This configuration yields a slit-limited spectral resolution of $\rm R \approx 1000$ (rest-frame 300 km/s) which is high enough to fully resolve the kinematics of MAMMOTH-1. The total on-source exposure time is 4 hours conducted with two pointings, we integrated for 2 hours consisting of 6 exposures of 20 min for each pointing. This exposure time allows us to reach a surface brightness equals to $\rm 7\times 10^{-19}\rm erg \ s^{-1} \ cm^{-2} \ arcsec^{-2}$. We didn't apply nod-and-shuffle, instead we interleaved observation for a nearby patch of sky ($\rm \Delta RA=+2\arcmin$,$\rm \Delta DEC=+1\arcmin$) for 4 hours to later perform sky subtraction, a standard star was also observed for flux calibration purposes.
-
+In this section, we provide details on the observations and KCWI instrument configurations. We obtained IFU spectroscopy of BOSS1441 on UT-20180518 with KCWI on Keck-II. The large slicer, with Field of View (FoV) of $\rm 20\arcsec \times 33\arcsec$, was employed for these observations which has the spatial resolution of $\rm \approx 1.35\arcsec$. We choose this slicer because it possesses the largest FoV to cover MAMMOTH-1. We also employed blue BL1 grating centered at $\rm \lambda=4500$ \AA which gives a usable wavelength coverage of $\rm 3500-5600$ \AA. This is an excellent regime to perform studies of Ly$\rm \alpha$ nebula at $\rm z\approx 2.3$. This configuration yields a slit-limited spectral resolution of $\rm R \approx 1000$ (rest-frame 300 km/s) which is high enough to fully resolve the kinematics of MAMMOTH-1. The total on-source exposure time is 4 hours conducted with two pointings, we integrated for 2 hours consisting of 6 exposures of 20 min for each pointing. This exposure time allows us to reach a surface brightness equals to $\rm 7\times 10^{-19}\rm erg \ s^{-1} \ cm^{-2} \ arcsec^{-2}$. We didn't apply nod-and-shuffle, instead we interleaved observations for a nearby patch of sky ($\rm \Delta RA=+2\arcmin$, $\rm \Delta DEC=+1\arcmin$) for 4 hours to later perform sky subtraction, a standard star was also observed for flux calibration purposes.
+\subsection{HST Broadband Imaging}
+The broadband image was obtained with Hubble Space Telescope (HST) Wide Field Camera 3 (WFC3) in the F160W filter (ID: 14760; PI: Z. Cai).For MAMMOTH-1 at $\rm z=2.31$, the infared F160W filter covers the rest-frame wavelength range of 4200-5100 \AA. The observations were performed on 2017 September 07 with the exposure time of 2212 seconds. The data were then calibrated by the data processing software system version COMMON  2017\underline{~~}2a.
 \subsection{Data Reduction}
-The data was reduced using the XXX pipeline. In this process, we first subtracted bias, corrected the variation by dividing the flat-field images from each raw image, removed cosmic-rays and created error images. Then we did geometric transformation and wavelength calibration. Finally we calibrated flux for each image with the spectrophotometric standard star. With all of these done, $\sigma$ clipping was performed for each sky cube by masking pixels with value $3\sigma$ above the median, then we used the masked cube to estimate the sky channel-by-channel and subtracted it from the reduced data cube. 
+The data was reduced using the XXX pipeline. In this process, we first subtracted bias, corrected the variation by dividing the flat-field images from each raw image, removed cosmic-rays and created error images. Then we did geometric transformation and wavelength calibration. Finally we calibrated flux for each image with the spectrophotometric standard star. With all of these done, $\rm \sigma$ clipping was performed for each sky cube by masking pixels with value $3\sigma$ above the median, then we used the masked cube to estimate the sky channel-by-channel and subtracted it from the reduced data cube. 
+\subsection{3D mask construction}
+The final step is to construct the three-dimensional segmentation mask (3D mask) in order to obtain the low-dimensional projections of the extracted sources, such as optimally-extracted images and flux-weighted-moment maps, for further analysis. We produce the 3D mask based on the user-defined signal-to-noise ratio (SNR) threshold, pixels in data cube with value lower than the threshold are masked which means the value of the corresponding pixels in 3D mask is 0, otherwise 1.  Because this process is based on the SNR threshold, the estimation of the background noise is essential. This noise is estimated under the assumption that background noise of each wavelength layer in the data cube shares the same value. This assumption allows us to calculate the standard deviation with parts of the data cube which do not contain either the emission nor the absorption components and apply it to the whole data cube. The SNR threshold is set to be $\rm 2\sigma$ which typically corresponds to a flux density of $\rm 10^{-18} erg \ s^{-1} \ cm^{-2}$ \AA$^{-1}$.
  
- \subsection{3D mask construction}
- The final step is to construct the three-dimensional segmentation mask (3D mask) in order to obtain the low-dimensional projections of the extracted sources, such as optimally-extracted images and flux-weighted-moment map, for further analysis. We produce the 3D mask based on the user-defined signal-to-noise ratio (SNR) threshold, pixels in data cube with value lower than the threshold are masked which means the value of the corresponding pixels in 3D mask is 0, otherwise 1.  Because this process is based on the SNR threshold, the estimation of the background noise is an essential aspect. This noise is estimated under the assumption that background noise of each wavelength layer in the data cube shares the same value. This assumption allows us to calculate the standard deviation with parts of the data cube which don't contain the emission and absorption components and apply it to the whole data cube. The SNR threshold is set to be $\rm 2\sigma$ which typically corresponds to a flux density of $\rm 10^{-18} erg \ s^{-1} \ cm^{-2}$ \AA$^{-1}$.
- 
- After this preliminary work, we find widely extended HeII and CIV emission and an extremely powerful outflow reaching hundreds of kiloparcsec which is never seen before at high redshift. In Sec. \ref{sec:results} we show our results to confirm this outflow and in Sec. \ref{sec:discussion} we give detailed discussion.
+ After this preliminary work, we find widely extended HeII and CIV emission and an extremely powerful outflow on 100 kpc which is rarely seen before at high redshift. In \S \ref{sec:results} we show our results to confirm this outflow and in \S \ref{sec:discussion} we give detailed discussion.
 \end{document}
