--- a/paper/ApJtemplate/sections/Results.tex
+++ b/paper/ApJtemplate/sections/Results.tex
@@ -5,7 +5,8 @@
 	\subfile{sections/results_sections/radio.tex}
 	\subsection{Morphology and Emission}
 	\subfile{sections/results_sections/morphology.tex}
-	\subsection{Kinematics}
+	\subfile{sections/results_sections/H_alpha}
+	\subsection{Three Dimensional Kinematics}
 	\subfile{sections/results_sections/kinematics.tex}
 	\subsection{Model of the outflow}
 	\subfile{sections/results_sections/outflowmodel.tex}
