--- a/paper/ApJtemplate/sections/discussion_sections/galaxymerger.tex
+++ b/paper/ApJtemplate/sections/discussion_sections/galaxymerger.tex
@@ -1,11 +1,10 @@
 \documentclass{subfiles}
 
 \begin{document}
-	By the submillimeter observation with ALMA and data collection from literature, \cite{arrigoni2018qso} fits the spectral energy distribution(SED) for Source-B, as a results he indicates that Source-B is an Ultra-Luminous Infrared Galaxy(ULIRG) with extreme far-infared luminosity. Besides, \cite{treister2010major} shows that there is substantial observational evidence that ULIRGs(heavily obscured galaxies) are the product of the gas-rich merger of two massive galaxies. \cite{cai2017discovery} also shows Source-B is a strongly obscured source. On the other hand the the flux-weighted dispersion map of ly$\alpha$ emission also shows velocity dispersion $ >600 km/s$ corresponding to FWHM $>1400 km/s$ near Source-B and the large dispersion extent to projected scale $\approx 100 kpc$(include G-5). Moreover, MAMMOTH-1 is an extreme overdensity($\delta =10.8 \pm 2.6$), The three sources of source-B is within 70 kpc. All of these evidences suggests a strong galaxies merger in this region. 
+\citet{cai2017mapping} demonstrates MAMMOTH-1 is in the density peak of BOSS1441 protocluster with overdensity $\rm \sigma=10.8 \pm 2.6$. \citet{arrigoni2018overdensity} finds the observed flux of BOSS1441 have good agreement with SED template of M82 which is a starburst galaxy. He estimates its far-infrared luminosity (rest-frame $\rm 8-1000\mu m$) $\rm L_{FIR}=3.2^{+7.4}_{-2.1} \times L_{\odot}$ which meets the criteria used to define ultra luminous infrared galaxy (ULIRG). Beside, the star-formation rate is also obtained by $\rm SFR=400 \ M_{\odot} \ yr^{-1}$. Based on the large SFR and the mass outflow rate $\rm \dot{M}_{out} \approx 500 \ M_{\odot} \ yr^{-1}$, we note that there should be a lot of gas injecting into the central AGN to supply the gas consumption. Furthermore, eight sources have been spectroscopically confirmed at $\rm z=2.32$ by our submillimeter observations \citep{qiongli2020} with our HST imaging even revealing three sources within $3\arcsec$. All of these evidences indicate that this is highly likely to be an violently interacting galaxy system.
 	
-	We suggest that the physical picture of this area is like this: three sources of source-B is experiencing galaxy merger, center source accretes gas and material the other two sources, its super massive black hole(SMBH) is going through a period of rapid growth and produce strong outflow. Owing to the tidal effect between the three sources, lots of material is pulled out from galaxies to CGM. This can also explain why there's such large coupling efficiency between outflow and environment. 
-	
-	Futhermore, from the velocity and dispersion map we see that the region with large dispersion extent to G-5 and there's also obvious velocity gradient on either side of G-5. This clue indicates that there may be also outflow from G-5. The large dispersion also support this point.  
+
+We suggest that the physical picture of this area is like this: the three central sources are wildly interacting with each others. The middle source continues to accrete material from others to supply its SMBH growth, star formation and meanwhile producing strong outflow. Owing to the tidal effect between the three sources, a lot of material is pulled out from galaxies and densifies the gas environment which consequently lead to the quasar heavily obscured. This dense gas environment can also naturally explain why there is strong coupling between outflow and environment.
 	\begin{figure*}
 		\centering
 		\subfloat{\includegraphics[width=0.5\textwidth]{figs/P_outSF_vs_L_AGN}}
