--- a/paper/ApJtemplate/template.bib
+++ b/paper/ApJtemplate/template.bib
@@ -34,6 +34,19 @@
   pages={41--48},
   year={1995},
   publisher={Oxford University Press Oxford, UK}}
+  @article{Johnson_2015,
+   title={On the origin of excess cool gas in quasar host haloes},
+   volume={452},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/stv1481},
+   DOI={10.1093/mnras/stv1481},
+   number={3},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Johnson, Sean D. and Chen, Hsiao-Wen and Mulchaey, John S.},
+   year={2015},
+   month={Jul},
+   pages={2553–2565}}
   @article{cai2017discovery,
   title={Discovery of an Enormous Ly$\alpha$ Nebula in a Massive Galaxy Overdensity at z= 2.3},
   author={Cai, Zheng and Fan, Xiaohui and Yang, Yujin and Bian, Fuyan and Prochaska, J Xavier and Zabludoff, Ann and McGreer, Ian and Zheng, Zhen-Ya and Green, Richard and Cantalupo, Sebastiano and others},
@@ -86,6 +99,19 @@
   pages={14},
   year={2006},
   publisher={IOP Publishing}}
+  @article{Li_2020,
+   title={Simple Yet Powerful: Hot Galactic Outflows Driven by Supernovae},
+   volume={890},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.3847/2041-8213/ab7304},
+   DOI={10.3847/2041-8213/ab7304},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Li, Miao and Bryan, Greg L.},
+   year={2020},
+   month={Feb},
+   pages={L30}}
   @article{tombesi2013unification,
   title={Unification of X-ray winds in Seyfert galaxies: from ultra-fast outflows to warm absorbers},
   author={Tombesi, Francesco and Cappi, M and Reeves, JN and Nemmen, RS and Braito, V and Gaspari, M and Reynolds, CS},
@@ -95,6 +121,55 @@
   pages={1102--1117},
   year={2013},
   publisher={Oxford University Press}}
+  @article{Faucher_Gigu_re_2016,
+   title={A stellar feedback origin for neutral hydrogen in high-redshift quasar-mass haloes},
+   volume={461},
+   ISSN={1745-3933},
+   url={http://dx.doi.org/10.1093/mnrasl/slw091},
+   DOI={10.1093/mnrasl/slw091},
+   number={1},
+   journal={Monthly Notices of the Royal Astronomical Society: Letters},
+   publisher={Oxford University Press (OUP)},
+   author={Faucher-Giguère, Claude-André and Feldmann, Robert and Quataert, Eliot and Kereš, Dušan and Hopkins, Philip F. and Murray, Norman},
+   year={2016},
+   month={May},
+   pages={L32–L36}}
+  @article{Lau_2016,
+   title={QUASARS PROBING QUASARS. VIII. THE PHYSICAL PROPERTIES OF THE COOL CIRCUMGALACTIC MEDIUM SURROUNDING
+                    z
+                    ∼ 2–3 MASSIVE GALAXIES HOSTING QUASARS},
+   volume={226},
+   ISSN={1538-4365},
+   url={http://dx.doi.org/10.3847/0067-0049/226/2/25},
+   DOI={10.3847/0067-0049/226/2/25},
+   number={2},
+   journal={The Astrophysical Journal Supplement Series},
+   publisher={American Astronomical Society},
+   author={Lau, Marie Wingyee and Prochaska, J. Xavier and Hennawi, Joseph F.},
+   year={2016},
+   month={Oct},
+   pages={25}}
+  @article{Heckman2016The,
+  title={The Implications of Extreme Outflows from Extreme Starbursts},
+  author={Heckman, Timothy M. and Borthakur, Sanchayeeta},
+  journal={Astrophysical Journal},
+  volume={822},
+  number={1},
+  pages={9},
+  year={2016}}
+  @article{Hennawi_2013,
+   title={QUASARS PROBING QUASARS. IV. JOINT CONSTRAINTS ON THE CIRCUMGALACTIC MEDIUM FROM ABSORPTION AND EMISSION},
+   volume={766},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1088/0004-637X/766/1/58},
+   DOI={10.1088/0004-637x/766/1/58},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Hennawi, Joseph F. and Prochaska, J. Xavier},
+   year={2013},
+   month={Mar},
+   pages={58}}
   @article{treister2010major,
   title={Major galaxy mergers and the growth of supermassive black holes in quasars},
   author={Treister, Ezequiel and Natarajan, Priyamvada and Sanders, David B and Urry, C Megan and Schawinski, Kevin and Kartaltepe, Jeyhan},
@@ -113,6 +188,30 @@
   pages={198--205},
   year={2018},
   publisher={Nature Publishing Group}}
+  @article{Prochaska_2013,
+   title={QUASARS PROBING QUASARS. VI. EXCESS H I ABSORPTION WITHIN ONE PROPER Mpc OFz∼ 2 QUASARS},
+   volume={776},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1088/0004-637X/776/2/136},
+   DOI={10.1088/0004-637x/776/2/136},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Prochaska, J. Xavier and Hennawi, Joseph F. and Lee, Khee-Gan and Cantalupo, Sebastiano and Bovy, Jo and Djorgovski, S. G. and Ellison, Sara L. and Lau, Marie Wingyee and Martin, Crystal L. and Myers, Adam and et al.},
+   year={2013},
+   month={Oct},
+   pages={136}}
+  @article{Cantalupo_2017,
+   title={Gas Accretion and Giant Lyα Nebulae},
+   ISBN={9783319525129},
+   ISSN={2214-7985},
+   url={http://dx.doi.org/10.1007/978-3-319-52512-9_9},
+   DOI={10.1007/978-3-319-52512-9_9},
+   journal={Astrophysics and Space Science Library},
+   publisher={Springer International Publishing},
+   author={Cantalupo, Sebastiano},
+   year={2017},
+   pages={195–220}}
   @article{cai2015mapping,
   title={MApping the Most Massive Overdensities Through Hydrogen (MAMMOTH) I: Methodology},
   author={Cai, Zheng and Fan, Xiaohui and Peirani, Sebastien and Bian, Fuyan and Frye, Brenda and McGreer, Ian and Prochaska, J Xavier and Lau, Marie Wingyee and Tejos, Nicolas and Ho, Shirley and others},
@@ -135,6 +234,19 @@
   pages={A14},
   year={2015},
   publisher={EDP Sciences}}
+  @article{Cantalupo_2014,
+   title={A cosmic web filament revealed in Lyman-α emission around a luminous high-redshift quasar},
+   volume={506},
+   ISSN={1476-4687},
+   url={http://dx.doi.org/10.1038/nature12898},
+   DOI={10.1038/nature12898},
+   number={7486},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC},
+   author={Cantalupo, Sebastiano and Arrigoni-Battaia, Fabrizio and Prochaska, J. Xavier and Hennawi, Joseph F. and Madau, Piero},
+   year={2014},
+   month={Jan},
+   pages={63–66}}
   @article{churazov2005supermassive,
   title={Supermassive black holes in elliptical galaxies: switching from very bright to very dim},
   author={Churazov, Eugene and Sazonov, S and Sunyaev, R and Forman, W and Jones, C and B{\"o}hringer, H},
@@ -144,6 +256,19 @@
   pages={L91--L95},
   year={2005},
   publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{Leibler_2018,
+   title={The detection of intergalactic H α emission from the Slug Nebula at z ∼ 2.3},
+   volume={480},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/sty1764},
+   DOI={10.1093/mnras/sty1764},
+   number={2},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Leibler, Camille N and Cantalupo, Sebastiano and Holden, Bradford P and Madau, Piero},
+   year={2018},
+   month={Jul},
+   pages={2094–2108}}
   @article{bower2006breaking,
   title={Breaking the hierarchy of galaxy formation},
   author={Bower, Richard G and Benson, AJ and Malbon, R and Helly, JC and Frenk, CS and Baugh, CM and Cole, Shaun and Lacey, Cedric G},
@@ -324,6 +449,19 @@
   pages={50},
   year={2011},
   publisher={IOP Publishing}}
+  @article{Ciotti_2017,
+   title={THE EFFECT OF AGN FEEDBACK ON THE INTERSTELLAR MEDIUM OF EARLY-TYPE GALAXIES: 2D HYDRODYNAMICAL SIMULATIONS OF THE LOW-ROTATION CASE},
+   volume={835},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.3847/1538-4357/835/1/15},
+   DOI={10.3847/1538-4357/835/1/15},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Ciotti, Luca and Pellegrini, Silvia and Negri, Andrea and Ostriker, Jeremiah P.},
+   year={2017},
+   month={Jan},
+   pages={15}}
   @article{mullaney2013narrow,
   title={Narrow-line region gas kinematics of 24 264 optically selected AGN: the radio connection},
   author={Mullaney, JR and Alexander, DM and Fine, S and Goulding, AD and Harrison, CM and Hickox, RC},
@@ -342,6 +480,45 @@
   pages={643--646},
   year={2019},
   publisher={Nature Publishing Group}}
+  @article{Hirschmann_2014,
+   title={Cosmological simulations of black hole growth: AGN luminosities and downsizing},
+   volume={442},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/stu1023},
+   DOI={10.1093/mnras/stu1023},
+   number={3},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Hirschmann, M. and Dolag, K. and Saro, A. and Bachmann, L. and Borgani, S. and Burkert, A.},
+   year={2014},
+   month={Jun},
+   pages={2304–2324}}
+  @article{Booth_2009,
+   title={Cosmological simulations of the growth of supermassive black holes and feedback from active galactic nuclei: method and tests},
+   volume={398},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1111/j.1365-2966.2009.15043.x},
+   DOI={10.1111/j.1365-2966.2009.15043.x},
+   number={1},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Booth, C. M. and Schaye, Joop},
+   year={2009},
+   month={Sep},
+   pages={53–74}}
+   @article{Ostriker_2010,
+   title={MOMENTUM DRIVING: WHICH PHYSICAL PROCESSES DOMINATE ACTIVE GALACTIC NUCLEUS FEEDBACK?},
+   volume={722},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1088/0004-637X/722/1/642},
+   DOI={10.1088/0004-637x/722/1/642},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Ostriker, Jeremiah P. and Choi, Ena and Ciotti, Luca and Novak, Gregory S. and Proga, Daniel},
+   year={2010},
+   month={Sep},
+   pages={642–652}}
   @article{schmidt1983quasar,
   title={Quasar evolution derived from the Palomar bright quasar survey and other complete quasar surveys},
   author={Schmidt, M and Green, RF},
@@ -358,6 +535,19 @@
   pages={2766},
   year={2006},
   publisher={IOP Publishing}}
+  @article{Sijacki_2007,
+   title={A unified model for AGN feedback in cosmological simulations of structure formation},
+   volume={380},
+   ISSN={0035-8711},
+   url={http://dx.doi.org/10.1111/j.1365-2966.2007.12153.x},
+   DOI={10.1111/j.1365-2966.2007.12153.x},
+   number={3},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Sijacki, Debora and Springel, Volker and Di Matteo, Tiziana and Hernquist, Lars},
+   year={2007},
+   month={Aug},
+   pages={877–900}}
   @article{chapman2005redshift,
   title={A redshift survey of the submillimeter galaxy population},
   author={Chapman, Scott C and Blain, AW and Smail, Ian and Ivison, RJ},
@@ -376,6 +566,19 @@
   pages={1479--1508},
   year={2011},
   publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{Ciotti_2007,
+   title={Radiative Feedback from Massive Black Holes in Elliptical Galaxies: AGN Flaring and Central Starburst Fueled by Recycled Gas},
+   volume={665},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1086/519833},
+   DOI={10.1086/519833},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Ciotti, Luca and Ostriker, Jeremiah P.},
+   year={2007},
+   month={Aug},
+   pages={1038–1056}}
   @article{madau1996high,
   title={High-redshift galaxies in the Hubble Deep Field: colour selection and star formation history to z~ 4},
   author={Madau, Piero and Ferguson, Henry C and Dickinson, Mark E and Giavalisco, Mauro and Steidel, Charles C and Fruchter, Andrew},
@@ -385,6 +588,19 @@
   pages={1388--1404},
   year={1996},
   publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{Di_Matteo_2005,
+   title={Energy input from quasars regulates the growth and activity of black holes and their host galaxies},
+   volume={433},
+   ISSN={1476-4687},
+   url={http://dx.doi.org/10.1038/nature03335},
+   DOI={10.1038/nature03335},
+   number={7026},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC},
+   author={Di Matteo, Tiziana and Springel, Volker and Hernquist, Lars},
+   year={2005},
+   month={Feb},
+   pages={604–607}}
   @article{lilly1999canada,
   title={The Canada-United Kingdom deep submillimeter survey. II. First identifications, redshifts, and implications for galaxy evolution},
   author={Lilly, Simon J and Eales, Stephen A and Gear, Walter KP and Hammer, Fran{\c{c}}ois and Le F{\`e}vre, Olivier and Crampton, David and Bond, J Richard and Dunne, Loretta},
@@ -394,6 +610,19 @@
   pages={641},
   year={1999},
   publisher={IOP Publishing}}
+  @article{Springel_2005,
+   title={Modelling feedback from stars and black holes in galaxy mergers},
+   volume={361},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1111/j.1365-2966.2005.09238.x},
+   DOI={10.1111/j.1365-2966.2005.09238.x},
+   number={3},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Springel, Volker and Di Matteo, Tiziana and Hernquist, Lars},
+   year={2005},
+   month={Aug},
+   pages={776–794}}
   @article{madau2014cosmic,
   title={Cosmic star-formation history},
   author={Madau, Piero and Dickinson, Mark},
@@ -402,6 +631,32 @@
   pages={415--486},
   year={2014},
   publisher={Annual Reviews}}
+  @article{Zubovas_2012,
+   title={CLEARING OUT A GALAXY},
+   volume={745},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.1088/2041-8205/745/2/L34},
+   DOI={10.1088/2041-8205/745/2/l34},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Zubovas, Kastytis and King, Andrew},
+   year={2012},
+   month={Jan},
+   pages={L34}}
+  @article{Sun_2017,
+   title={Sizes and Kinematics of Extended Narrow-line Regions in Luminous Obscured AGN Selected by Broadband Images},
+   volume={835},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.3847/1538-4357/835/2/222},
+   DOI={10.3847/1538-4357/835/2/222},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Sun, Ai-Lei and Greene, Jenny E. and Zakamska, Nadia L.},
+   year={2017},
+   month={Jan},
+   pages={222}}
   @book{harrison2016observational,
   title={Observational constraints on the influence of active galactic nuclei on the evolution of galaxies},
   author={Harrison, Christopher Mark},
@@ -422,6 +677,31 @@
   pages={131},
   year={2017},
   publisher={IOP Publishing}}
+  @article{Fiore_2017,
+   title={AGN wind scaling relations and the co-evolution of black  holes and galaxies},
+   volume={601},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201629478},
+   DOI={10.1051/0004-6361/201629478},
+   journal={Astronomy & Astrophysics},
+   publisher={EDP Sciences},
+   author={Fiore, F. and Feruglio, C. and Shankar, F. and Bischetti, M. and Bongiorno, A. and Brusa, M. and Carniani, S. and Cicone, C. and Duras, F. and Lamastra, A. and et al.},
+   year={2017},
+   month={May},
+   pages={A143}}
+  @article{Alexander_2010,
+   title={Searching for evidence of energetic feedback in distant galaxies: a galaxy wide outflow in az ≈ 2ultraluminous infrared galaxy},
+   volume={402},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1111/j.1365-2966.2009.16046.x},
+   DOI={10.1111/j.1365-2966.2009.16046.x},
+   number={4},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Alexander, D. M. and Swinbank, A. M. and Smail, Ian and McDermid, R. and Nesvadba, N. P. H.},
+   year={2010},
+   month={Mar},
+   pages={2211–2220}}
   @article{ivison2010far,
   title={The far-infrared/radio correlation as probed by Herschel},
   author={Ivison, RJ and Magnelli, B and Ibar, E and Andreani, P and Elbaz, D and Altieri, B and Amblard, A and Arumugam, V and Auld, R and Aussel, H and others},
@@ -430,6 +710,19 @@
   pages={L31},
   year={2010},
   publisher={EDP Sciences}}
+  @article{Rupke_2011,
+   title={INTEGRAL FIELD SPECTROSCOPY OF MASSIVE, KILOPARSEC-SCALE OUTFLOWS IN THE INFRARED-LUMINOUS QSO Mrk 231},
+   volume={729},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.1088/2041-8205/729/2/L27},
+   DOI={10.1088/2041-8205/729/2/l27},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Rupke, David S. N. and Veilleux, Sylvain},
+   year={2011},
+   month={Feb},
+   pages={L27}}
   @article{arrigoni2018overdensity,
   title={Overdensity of submillimeter galaxies around the z≃ 2.3 MAMMOTH-1 nebula.},
   author={Arrigoni Battaia, F and Chen, Chian-Chou and Fumagalli, M and Cai, Zheng and Calistro Rivera, G and Xu, Jiachuan and Smail, I and Prochaska, JX and Yang, Yujin and De Breuck, C},
@@ -438,6 +731,32 @@
   pages={A202},
   year={2018},
   publisher={EDP Sciences}}
+  @article{Morganti_2007,
+   title={IC 5063: AGN driven outflow of warm and cold gas},
+   volume={476},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361:20077888},
+   DOI={10.1051/0004-6361:20077888},
+   number={2},
+   journal={Astronomy & Astrophysics},
+   publisher={EDP Sciences},
+   author={Morganti, R. and Holt, J. and Saripalli, L. and Oosterloo, T. A. and Tadhunter, C. N.},
+   year={2007},
+   month={Sep},
+   pages={735–743}}
+  @article{Nesvadba_2011,
+   title={The dynamics of the ionized and molecular interstellar medium in powerful obscured quasars at z≥ 3.5★},
+   volume={415},
+   ISSN={0035-8711},
+   url={http://dx.doi.org/10.1111/j.1365-2966.2011.18862.x},
+   DOI={10.1111/j.1365-2966.2011.18862.x},
+   number={3},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Nesvadba, N. P. H. and Polletta, M. and Lehnert, M. D. and Bergeron, J. and De Breuck, C. and Lagache, G. and Omont, A.},
+   year={2011},
+   month={Jun},
+   pages={2359–2372}}
   @article{del2013goods,
   title={GOODS-Herschel: radio-excess signature of hidden AGN activity in distant star-forming galaxies},
   author={Del Moro, A and Alexander, DM and Mullaney, JR and Daddi, E and Pannella, M and Bauer, FE and Pope, A and Dickinson, M and Elbaz, D and Barthel, PD and others},
