--- a/KCWI_script/ASTRO_P&S.ipynb
+++ b/KCWI_script/ASTRO_P&S.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the mass outflow rate upper limit is 874847.4769069125 solMass / yr\n",
-      "the momentum outflow rate upper limit is 524908486.14414746 km solMass / (s yr)\n",
-      "the energy outflow rate upper limit is 9.9225e+46 erg/s\n"
+      "the mass outflow rate upper limit is 292825.1386105184 solMass / yr\n",
+      "the momentum outflow rate upper limit is 146412569.3052592 km solMass / (s yr)\n",
+      "the energy outflow rate upper limit is 2.3064000000000005e+46 erg/s\n"
      ]
     }
    ],
@@ -74,9 +74,9 @@
     "           'ytick.labelleft':True}\n",
     "rcParams.update(plt_param)\n",
     "\n",
-    "r10=3.5\n",
-    "v1000=0.6\n",
-    "n05=2.5\n",
+    "r10=2.48\n",
+    "v1000=0.5\n",
+    "n05=2\n",
     "E_up=1.5e46*np.power(r10,2)*np.power(v1000,3)*n05*u.erg/u.s\n",
     "Mout_up=(2*E_up/np.power(v1000*1000*u.km/u.s,2)).to(u.M_sun/u.yr)\n",
     "Pout_up=Mout_up*v1000*1000*u.km/u.s\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +220,26 @@
     "Eoutmean_B_log=(Eoutlow_B_log+Eouthigh_B_log)/2.\n",
     "Eouthigh_B_logerr=Eouthigh_B_log-Eoutmean_B_log\n",
     "Eoutlow_B_logerr=Eoutmean_B_log-Eoutlow_B_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1631786099595114e+45"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**Eoutmean_B_log"
    ]
   },
   {
